made python files into static js for github pages

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 
   
     <!-- Link to our JavaScript -->
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
+    <script type="module" src="fitness.js"></script>
+    <script type="module" src="countingTypes.js"></script>
+    <script type="module" src="optimizer.js"></script>
+
   </body>
 </html>
