minor changes to instruction message

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <details class="info-section">
         <summary>What is this? (Click to expand)</summary>
         <div>
-            <p>This is an interactive tool for exploring permutations and their properties, specifically focusing on "2413" patterns. A permutation is just an ordered list of unique numbers. The graph visualizes your permutation, with the x-axis showing the position (index) and the y-axis showing the value.</p>
-            <p>A "2413" pattern is a subsequence of four elements whose values are ordered like the numbers 2, 4, 1, and 3. For example, in the permutation <b>2,4,5,1,3</b>, the subsequence <b>(2, 4, 1, 3)</b> forms a "2413" pattern. The subsequence <b>(2, 5, 1, 3)</b> is another one. This tool found 2 such patterns.</p>
+            <p>This tool lets you explore permutations visually. Each dot shows a number in the permutation—x-axis is the value, y-axis is the position.</p>
+            <p>It counts all "2413" patterns: sets of four indices i &lt; j &lt; k &lt; l such that π[i] &lt; π[k] &lt; π[l] &lt; π[j], matching the relative order of (2, 4, 1, 3).</p>
+            <p>For example, in the permutation <b>2,4,5,1,3</b>, the subsequence <b>(2, 4, 1, 3)</b> forms a "2413" pattern. The subsequence <b>(2, 5, 1, 3)</b> is another one. This tool found 2 such patterns.</p>
             
             <h3>How to use it</h3>
             <ul>
