--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </details>
 
     <div>
-        <input id="permInput" value="2,4,5,1,3" placeholder="Enter permutation (comma-separated)" />
+        <input id="permInput" value="27, 29, 32, 26, 31, 25, 28, 30, 35, 34, 37, 40, 39, 42, 44, 46, 49, 48, 52, 54, 56, 58, 61, 63, 66, 94, 96, 99, 93, 98, 92, 95, 97, 24, 90, 91, 23, 89, 22, 87, 88, 21, 86, 20, 85, 19, 84, 18, 82, 83, 16, 17, 81, 15, 80, 14, 79, 13, 78, 11, 12, 77, 10, 76, 8, 9, 75, 2, 4, 7, 1, 6, 0, 3, 5, 33, 36, 38, 41, 43, 45, 47, 51, 50, 53, 55, 57, 60, 59, 62, 65, 64, 69, 71, 74, 68, 73, 67, 70, 72" placeholder="Enter permutation (comma-separated)" />
         <button id="plotBtn">Plot</button>
         <button id="toggleOptimizerMode">Optimizer Mode: OFF</button>
         <button id="applyOptimizer" disabled>Apply Optimizer</button>
